--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.52.0",
     "axios": "^1.7.4",
     "expo": "~51.0.28",
+    "expo-font": "~12.0.9",
     "expo-status-bar": "~1.12.1",
     "lottie-react-native": "^6.7.2",
     "lucide-react-native": "^0.429.0",
@@ -22,7 +23,7 @@
     "react-native": "0.74.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "expo-font": "~12.0.9"
+    "react-native-toast-message": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
