--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react-native": "^0.429.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
